--- a/web/Front/MainTemplete_Logeado.xhtml
+++ b/web/Front/MainTemplete_Logeado.xhtml
@@ -63,7 +63,7 @@
                                         </li>
                                         <li><a href="Como_Trabajar.xhtml">COMO TRABAJAR</a>
                                         </li>
-                                        <li><a href="#">COMO FUNCIONA PAGOS</a>
+                                        <li><a href="Como_Hacer_Un_Pago.xhtml">COMO HACER PAGOS</a>
                                         </li>
                                         <li><a href="Como_Contratar.xhtml">CÓMO ENCUENTRO UN TRABAJO</a>
                                         </li>
