--- a/web/Backend/Miembro.xhtml
+++ b/web/Backend/Miembro.xhtml
@@ -60,8 +60,8 @@
                                 <p:column headerText="Foto">
                                     <h:graphicImage value="/images/#{usuario.foto}" alt="user" height="50" width="50" />
                                 </p:column>
-                                <p:column headerText="Estado">
-                                    <h:outputText value="#{usuario.estado}" />
+                                <p:column headerText="Activo">
+                                    <h:outputText value="#{usuario.estado?'Si':'No'}" />
                                 </p:column>
                                 <f:facet name="footer">
                                     
@@ -164,13 +164,14 @@
                                     <p:message for="ur_ubi" />
 
                                     <p:outputLabel for="ur_pw" styleClass="mj_blue_text" value="Contraseña:" />
-                                    <p:inputText id="ur_pw" value="#{usuarioBean.usuario.contrasena}"
+                                    <p:password id="ur_pw" value="#{usuarioBean.usuario.contrasena}"
                                                  required="true" requiredMessage="Por favor ingrese su contraseña"
                                                  validatorMessage="Contraseña incorrecta. Ingrese una contraseña de minimo 8 caracteres."
                                                  placeholder="Contraseña">
                                         <f:validateLength minimum="8" maximum="45" ></f:validateLength>
                                         <p:clientValidator />
-                                    </p:inputText>
+                                    </p:password>
+                                    
                                     <p:message for="ur_pw" />                                    
 
 
@@ -200,8 +201,8 @@
                                     <p:inputText value="#{usuarioBean.usuario.foto}" />
                                     <p:separator />
 
-                                    <h:outputText styleClass="mj_blue_text" value="Estado" />
-                                    <p:selectBooleanCheckbox value="#{usuarioBean.usuario.estado}" />
+                                    <h:outputText styleClass="mj_blue_text" value="Activo?" />
+                                    <p:selectBooleanCheckbox value="#{usuarioBean.usuario.estado?'Si':'No'}" />
 
                                     <f:facet name="footer">
 
@@ -300,13 +301,13 @@
                                     <p:message for="ur_ubi" />
 
                                     <p:outputLabel for="ur_pw" styleClass="mj_blue_text" value="Contraseña:" />
-                                    <p:inputText id="ur_pw" value="#{usuarioBean.createUsuario.contrasena}"
+                                    <p:password id="ur_pw" value="#{usuarioBean.createUsuario.contrasena}"
                                                  required="true" requiredMessage="Por favor ingrese su contraseña"
                                                  validatorMessage="Contraseña incorrecta. Ingrese una contraseña de minimo 8 caracteres."
                                                  placeholder="Contraseña">
                                         <f:validateLength minimum="8" maximum="45" ></f:validateLength>
                                         <p:clientValidator />
-                                    </p:inputText>
+                                    </p:password>
                                     <p:message for="ur_pw" />                                    
 
 
@@ -347,8 +348,8 @@
                                     <p:separator />
 
 
-                                    <h:outputText styleClass="mj_blue_text" value="Estado" />
-                                    <p:selectBooleanCheckbox value="#{usuarioBean.createUsuario.estado}" />
+                                    <h:outputText styleClass="mj_blue_text" value="Activo?" />
+                                    <p:selectBooleanCheckbox value="#{usuarioBean.createUsuario.estado?'Si':'No'}" />
                                     <p:separator />
 
                                     <f:facet name="footer">
