--- a/web/Front/Como_Contratar.xhtml
+++ b/web/Front/Como_Contratar.xhtml
@@ -1,154 +1,123 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./MainTemplete.xhtml"
+                template="#{loginBean.isLogged()? './MainTemplete_Logeado.xhtml':'./MainTemplete.xhtml'}"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
-                xmlns:p="http://primefaces.org/ui">
-    <ui:define name="contenido">
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-        <div class="mj_lightgraytbg mj_gallerypage mj_bottompadder80">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
-                        <div class="mj_mainheading mj_toppadder80 mj_bottompadder50">
-                            <h1>¿Cómo encuentro un trabajo?</h1>
-                            <p>En metrópolis tienes la oportunidad de encontrar propuestas de trabajo posteadas por potenciales empleadores en busca de la persona indicada para llevar a cabo esa tarea específica.</p>
-                        </div>
+    <ui:define name="contenido">
+   
+    <div class="mj_lightgraytbg mj_bottompadder80">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
+                    <div class="mj_mainheading mj_toppadder80 mj_bottompadder50">
+                      <h1><strong>COMO CONTRATAR UN SERVICIO</strong></h1>
+                      <p>En metrópolis puedes encontrar personas que ofrecen un servicio o varios para esa necesidad que presentas... nuestra plataforma permite que encuentres de manera fácil y pagues de manera segura...Recuerda seimpre ser claro en los terminos de tu contratación.</p>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12">
-                        <div class="row">
-                            <div class="mj_filter_menu">
-                                <ul>
-                                    <li> <a href="#" class="filter" data-filter="all">SIMPLE, PASA TU MOUSE POR CADA ITEM Y SIGUE LAS RECOMENDACIONES...Recuerda, ser muy claro en los terminos de tu contratacion...</a>&nbsp;</li>
-                                    <li> <a href="#" class="filter" data-filter=".business"></a>
-                                    </li>
-                                    <li> <a href="#" class="filter" data-filter=".office"></a>
-                                    </li>
-                                    <li> <a href="#" class="filter" data-filter=".time"></a>
-                                    </li>
-                                    <li> <a href="#" class="filter" data-filter=".holiday"></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="mj_grid">
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix mix-all holiday" data-value="1">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/CON-01.png" alt="gallery" class="img-responsive" />
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">En la barra principal ubica la lupa (buscar)</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix business" data-value="2">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/CON-02.png" alt="gallery" class="img-responsive" />
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Puedes bucar por palabras claves (profesiones o oficios)</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix office" data-value="3">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/CON-03.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Selecciona los profesionales de interes de acuerdo a tu necesidad</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix time" data-value="4">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/CON-04.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">En Cada perfil puedes mirar habilidades y experiencias para hacer tu busqueda mas efectiva</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix holiday" data-value="5">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/CON-05.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Enviar una solicitud de cotización especificando el trabajo, fecha/horario, número de horas.</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix time" data-value="6">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/CON-06.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Recibir cotización y aceptar o contra ofertar.</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix business" data-value="7">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/CON-07.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Recuerda fijarte si recibiste una aceptación (si es que hizo una contra oferta)</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix office" data-value="8">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/CON-08.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Procede a realizar el pago, como te lo indica la plataforma</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix time" data-value="9">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/CON-09.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Tras recibir una aceptación del pago, esperar a la fecha acordada para el trabajo.
-                                                    No olvides calificar el trabajo.</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mj_showmore"> <a href="#" class="mj_showmorebtn mj_bluebtn mj_showbtnbig">CONTRATAR / OFERTAR</a> </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="mj_articleslider mj_bottompadder50">
+<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+            <div class="mj_recent_article">
+                            <div class="mj_articleimg"> <img src="../images/CCON01.png" class="img-responsive" alt="" />
+                                <div class="mj_articleoverlay"> </div>
+                            </div>
+                            <div class="mj_articledata">
+                                <p>En la barra principal ubica la lupa (buscar) o en la lista de trabajos y servicios destacados.</p>
+                                <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+          </div>
+                  </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <div class="mj_recent_article">
+                            <div class="mj_articleimg"> <img src="../images/CCON02.png" class="img-responsive" alt="" />
+                                <div class="mj_articleoverlay"> </div>
+                            </div>
+                            <div class="mj_articledata">
+                                <p>Puedes buscar por palabras claves (profesiones u oficios) o en el menú trabajos.</p>
+                                <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <div class="mj_recent_article">
+                            <div class="mj_articleimg"> <img src="../images/CCON03.png" class="img-responsive" alt="" />
+                                <div class="mj_articleoverlay"> </div>
+                            </div>
+                            <div class="mj_articledata">
+                                <p>Selecciona los profesionales de interés de acuerdo a tu necesidad.</p>
+                                <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <div class="mj_recent_article">
+                            <div class="mj_articleimg"> <img src="../images/CCON04.png" class="img-responsive" alt="" />
+                                <div class="mj_articleoverlay"> </div>
+                            </div>
+                            <div class="mj_articledata">
+                                <p>En Cada perfil puedes mirar habilidades y experiencias para hacer tu búsqueda más efectiva.</p>
+                                <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <div class="mj_recent_article">
+                            <div class="mj_articleimg"> <img src="../images/CCON05.png" class="img-responsive" alt="" />
+                                <div class="mj_articleoverlay"> </div>
+                            </div>
+                            <div class="mj_articledata">
+                                <p>Enviar una solicitud de cotización especificando el trabajo, fecha/horario, número de horas.</p>
+                                <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                        </div>
+                    </div>
+                  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <div class="mj_recent_article">
+                            <div class="mj_articleimg"> <img src="../images/CCON06.png" class="img-responsive" alt="" />
+                                <div class="mj_articleoverlay"> </div>
+                            </div>
+                            <div class="mj_articledata">
+                                <p>Recibir cotización y aceptar o contra ofertar.</p>
+                                <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                        </div>
+                  </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <div class="mj_recent_article">
+                            <div class="mj_articleimg"> <img src="../images/CCON07.png" class="img-responsive" alt="" />
+                                <div class="mj_articleoverlay"> </div>
+                            </div>
+                            <div class="mj_articledata">
+                                <p>Recuerda fijarte si recibiste una aceptación (si es que hizo una contra oferta).</p>
+                                <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <div class="mj_recent_article">
+                            <div class="mj_articleimg"> <img src="../images/CCON08.png" class="img-responsive" alt="" />
+                                <div class="mj_articleoverlay"> </div>
+                            </div>
+                            <div class="mj_articledata">
+                                <p>Procede a realizar el pago, como te lo indica la plataforma.</p>
+                                <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                        </div>
+                    </div>
+                  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <div class="mj_recent_article">
+                            <div class="mj_articleimg"> <img src="../images/CCON09.png" class="img-responsive" alt="" />
+                                <div class="mj_articleoverlay"> </div>
+                            </div>
+                            <div class="mj_articledata">
+                                <p>Tras recibir una aceptación del pago, esperar a la fecha acordada para el trabajo. No olvides calificar el trabajo.</p>
+                                <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                        </div>
+                                
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> </div>
+              </div>
+            </div>
         </div>
+    </div>
     </ui:define>
 </ui:composition>
+
+   
