--- a/web/Front/Como_Trabajar.xhtml
+++ b/web/Front/Como_Trabajar.xhtml
@@ -1,155 +1,122 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./MainTemplete.xhtml"
+                template="#{loginBean.isLogged()? './MainTemplete_Logeado.xhtml':'./MainTemplete.xhtml'}"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
-                xmlns:p="http://primefaces.org/ui">
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
+
     <ui:define name="contenido">
 
-        <div class="mj_lightgraytbg mj_gallerypage mj_bottompadder80">
+
+        <div class="mj_lightgraytbg mj_bottompadder80">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
                         <div class="mj_mainheading mj_toppadder80 mj_bottompadder50">
-                            <h1>¿Cómo encuentro un trabajo?</h1>
-                            <p>En metrópolis tienes la oportunidad de encontrar propuestas de trabajo posteadas por potenciales empleadores en busca de la persona indicada para llevar a cabo esa tarea específica.</p>
+                            <h1><strong>COMO OFRECER TUS SERVICIOS</strong></h1>
+                            <p>En metrópolis tienes la oportunidad de ofrecer tus servicios de una manera fácil y así ser encontrado por potenciales empleadores en busca de la persona indicada para llevar a cabo una tarea específica...</p><br /><p>Recuerda honestidad y eficiencia es la base de una buena práctica.</p>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12">
-                        <div class="row">
-                            <div class="mj_filter_menu">
-                                <ul>
-                                    <li> <a href="#" class="filter" data-filter="all">SIMPLE, PASA POR CADA ITEM Y SIGUE LAS RECOMENDACIONES...<span style="">Recuerda honestidad y eficiencia es la base de una buena practica</span></a>&nbsp;</li>
-                                    <li> <a href="#" class="filter" data-filter=".business"></a>
-                                    </li>
-                                    <li> <a href="#" class="filter" data-filter=".office"></a>
-                                    </li>
-                                    <li> <a href="#" class="filter" data-filter=".time"></a>
-                                    </li>
-                                    <li> <a href="#" class="filter" data-filter=".holiday"></a>
-                                    </li>
-                                </ul>
+                    <div class="mj_articleslider mj_bottompadder50">
+                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                            <div class="mj_recent_article">
+                                <div class="mj_articleimg"> <img src="../images/CTRA01.png" class="img-responsive" alt="" />
+                                        <div class="mj_articleoverlay"> </div>
+                                </div>
+                                <div class="mj_articledata">
+                                    <p>Ingresa a tu cuenta en el menú, o crea una nueva si no estás registrado.</p>
+                                    <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                            <div class="mj_recent_article">
+                                <div class="mj_articleimg"> <img src="../images/CTRA02.png" class="img-responsive" alt="" />
+                                        <div class="mj_articleoverlay"> </div>
+                                </div>
+                                <div class="mj_articledata">
+                                    <p>Selecciona la opción OFERTAR del menú y sigue los pasos del formulario.</p>
+                                    <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                            <div class="mj_recent_article">
+                                <div class="mj_articleimg"> <img src="../images/CTRA03.png" class="img-responsive" alt="" />
+                                        <div class="mj_articleoverlay"> </div>
+                                </div>
+                                <div class="mj_articledata">
+                                    <p>Selecciona las propuestas de tu interés y organiza un itinerario de acuerdo a las fechas que dispones.</p>
+                                    <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                            <div class="mj_recent_article">
+                                <div class="mj_articleimg"> <img src="../images/CTRA04.png" class="img-responsive" alt="" />
+                                        <div class="mj_articleoverlay"> </div>
+                                </div>
+                                <div class="mj_articledata">
+                                    <p>Espera a que la persona interesada te elija y consulta si el presupuesto se ajusta a lo que ofreces.</p>
+                                    <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                            <div class="mj_recent_article">
+                                <div class="mj_articleimg"> <img src="../images/CTRA05.png" class="img-responsive" alt="" />
+                                        <div class="mj_articleoverlay"> </div>
+                                </div>
+                                <div class="mj_articledata">
+                                    <p>Recuerda que siempre puedes contraofertar para ajustarte al presupuesto si así lo deseas.</p>
+                                    <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                            <div class="mj_recent_article">
+                                <div class="mj_articleimg"> <img src="../images/CTRA06.png" class="img-responsive" alt="" />
+                                        <div class="mj_articleoverlay"> </div>
+                                </div>
+                                <div class="mj_articledata">
+                                    <p>Envía tus cotizaciones una vez este seguro del tiempo y el precio acordado.</p>
+                                    <a href="#"><i class="fa fa-angle-right"></i></a> </div>
                             </div>
                         </div>
                     </div>
-                    <div id="mj_grid">
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix mix-all holiday" data-value="1">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/TRA-01.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">En nuestra seccion "trabajos" busca (propuestas)</h5>
-                                            </div>
-                                        </div>
-                                </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <div class="mj_recent_article">
+                            <div class="mj_articleimg"> <img src="../images/CTRA07.png" class="img-responsive" alt="" />
+                                    <div class="mj_articleoverlay"> </div>
                             </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix business" data-value="2">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/TRA-02.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Organiza tus propuestas por filtros profesion/oficios etc.</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix office" data-value="3">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/TRA-03.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Selecciona las propuestas de tu interes</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix time" data-value="4">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/TRA-04.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Recuerda organizar tu intinerario antes de aplicar</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix holiday" data-value="5">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/TRA-05.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Cotiza solo para aquellos trabajos que estes capacitado</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix time" data-value="6">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/TRA-06.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Ahora en el boton aplicar para enviar cada una de las propuestas</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix business" data-value="7">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/TRA-07.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Espera la respuesta de empleador para saber si fuiste seleccionado</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix office" data-value="8">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/TRA-08.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Recuerda ser honesto con tu empleador y establece condiciones si es necesario</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 mix time" data-value="9">
-                            <div class="row">
-                                <div class="mj_gallary_img">
-                                    <img src="../images/TRA-09.png" alt="gallery" class="img-responsive"></img>
-                                        <div class="mj_overlay">
-                                            <div class="mj_gallary_info">
-                                                <h5 class="animated fadeInDown">Listo! ahora gana dinero de forma simple y efectiva, en esta ciudad llena de oportunidades</h5>
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
+                            <div class="mj_articledata">
+                                <p>Espera la respuesta del cliente después de concretar fecha, lugar y precios.</p>
+                                <a href="#"><i class="fa fa-angle-right"></i></a> </div>
                         </div>
                     </div>
-                    <div class="mj_showmore"> <a href="#" class="mj_showmorebtn mj_bluebtn mj_showbtnbig">BUSCAR TRABAJOS</a> </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <div class="mj_recent_article">
+                            <div class="mj_articleimg"> <img src="../images/CTRA08.png" class="img-responsive" alt="" />
+                                    <div class="mj_articleoverlay"> </div>
+                            </div>
+                            <div class="mj_articledata">
+                                <p>Recuerda ser honesto con tu empleador y establece condiciones si es necesario.</p>
+                                <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <div class="mj_recent_article">
+                            <div class="mj_articleimg"> <img src="../images/CTRA09.png" class="img-responsive" alt="" />
+                                    <div class="mj_articleoverlay"> </div>
+                            </div>
+                            <div class="mj_articledata">
+                                <p>¡Listo!  ahora gana dinero de forma simple y efectiva, en esta ciudad llena de oportunidades.</p>
+                                <a href="#"><i class="fa fa-angle-right"></i></a> </div>
+                        </div>
+
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> </div>
+                    </div>
                 </div>
             </div>
         </div>
-
     </ui:define>
-
 </ui:composition>
