--- a/web/Front/MainTemplete.xhtml
+++ b/web/Front/MainTemplete.xhtml
@@ -63,7 +63,7 @@
                                         </li>
                                         <li><a href="Como_Trabajar.xhtml">COMO TRABAJAR</a>
                                         </li>
-                                        <li><a href="#">COMO FUNCIONA PAGOS</a>
+                                        <li><a href="Como_Hacer_Un_Pago.xhtml">COMO HACER PAGOS</a>
                                         </li>
                                         <li><a href="Como_Contratar.xhtml">CÓMO ENCUENTRO UN TRABAJO</a>
                                         </li>
@@ -179,18 +179,19 @@
                                     &nbsp;</div>
                             </form>
                         </div>
+                        
                         <div class="mj_weight mj_bottompadder20">
                             <div class="mj_sociallink">
                                 <ul>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a>
+                                    <li><a href="https://www.facebook.com/metropolis.com.co/"><i class="fa fa-facebook"></i></a>
                                     </li>
                                     <li><a href="#"><i class="fa fa-twitter"></i></a>
                                     </li>
+                                    <li><a href="#"><i class="fa fa-instagram"></i></a>
+                                    </li>
                                     <li><a href="#"><i class="fa fa-google-plus"></i></a>
                                     </li>
-                                    <li><a href="#"><i class="fa fa-behance"></i></a>
-                                    </li>
-                                    <li><a href="#"><i class="fa fa-dribbble"></i></a>
+                                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
                                     </li>
                                 </ul>
                             </div>
