--- a/web/Front/MainTemplete.xhtml
+++ b/web/Front/MainTemplete.xhtml
@@ -185,13 +185,13 @@
                                 <ul>
                                     <li><a href="https://www.facebook.com/metropolis.com.co/"><i class="fa fa-facebook"></i></a>
                                     </li>
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a>
+                                    <li><a href="https://twitter.com/Metropoliscomco"><i class="fa fa-twitter"></i></a>
                                     </li>
-                                    <li><a href="#"><i class="fa fa-instagram"></i></a>
+                                    <li><a href="https://www.instagram.com/metropolis.com.co/"><i class="fa fa-instagram"></i></a>
                                     </li>
-                                    <li><a href="#"><i class="fa fa-google-plus"></i></a>
+                                    <li><a href="https://plus.google.com/u/0/104979137840229529597"><i class="fa fa-google-plus"></i></a>
                                     </li>
-                                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                                    <li><a href="https://www.linkedin.com/company/metropolis.com.co"><i class="fa fa-linkedin"></i></a>
                                     </li>
                                 </ul>
                             </div>
