--- a/web/Backend/MainTemplete_Logeado.xhtml
+++ b/web/Backend/MainTemplete_Logeado.xhtml
@@ -54,7 +54,7 @@
                             <ul class="nav navbar-nav">
                                 <li><a href="../Front/index.xhtml">INICIO</a>
                                 </li>
-                                <li><a href="../Front/Trabajador.xhtml">BUSCAR TRABAJO</a></li>
+                                <li><a href="../Front/Trabajador.xhtml">BUSCAR SERVICIOS</a></li>
                                 <li><a href="../Front/Ofertar.xhtml">OFERTAR</a>
                                 </li>
 
