--- a/web/Front/MainTemplete_Logeado.xhtml
+++ b/web/Front/MainTemplete_Logeado.xhtml
@@ -54,7 +54,7 @@
                             <ul class="nav navbar-nav">
                                 <li ><a href="index.xhtml">INICIO</a>
                                 </li>
-                                <li><a href="Trabajador.xhtml">BUSCAR TRABAJO</a></li>
+                                <li><a href="Trabajador.xhtml">BUSCAR SERVICIOS</a></li>
                                 <li><a href="Ofertar.xhtml">OFERTAR</a>
                                 </li>
                                 <li><a href="#">COMO FUNCIONA</a>
