--- a/web/Front/index.xhtml
+++ b/web/Front/index.xhtml
@@ -597,36 +597,36 @@
                                 <div role="tabpanel" class="tab-pane active" id="recentjobs">
                                     <div class="mj_tabcontent mj_toppadder30">
                                         <h:form id="formMostrarOfertabyRecientes" >
-                                            <p:dataTable emptyMessage="No se encontraron resultados"  var="oferta" value="#{ofertaBean.ofertasbyRecientes}"
-                                                         selectionMode="single" selection="#{ofertaBean.ofertaSelected}" rowKey="#{oferta.idOferta}" styleClass="table table-striped" >
-                                                <p:ajax event="rowSelect" listener="#{ofertaBean.onRowSelect}" ></p:ajax>
+                                            <h:dataTable   var="oferta" value="#{ofertaBean.ofertasbyRecientes}" styleClass="table table-striped" >
 
-                                                <p:column>
-                                                    <a href="#">                                                        
+                                                <h:column>
+                                                    <h:commandLink action="#{ofertaBean.gotoTrabajo(oferta)}">
                                                         <p:graphicImage value="#{oferta.usuario.foto == null or oferta.usuario.foto.equals('') ? '/images/perfil-sinfoto.png':oferta.usuario.foto }"  styleClass="img-responsive" alt="" width="70" height="70" />
-                                                    </a>
-                                                </p:column>
+                                                    </h:commandLink>
+                                                </h:column>
 
-                                                <p:column>
-                                                    <h:outputText value="#{oferta.trabajo.titulo}" />
-                                                </p:column>
+                                                <h:column>
+                                                    <h:commandLink action="#{ofertaBean.gotoTrabajo(oferta)}">
+                                                        <h:outputText value="#{oferta.trabajo.titulo}" />
+                                                    </h:commandLink>
+                                                </h:column>
 
-                                                <p:column >
+                                                <h:column >
                                                     <i class="fa fa-map-marker"></i>
                                                     <h:outputText value="#{oferta.usuario.ubicacion.barrio}" />
-                                                </p:column>
+                                                </h:column>
 
-                                                <p:column >
+                                                <h:column >
                                                     <a  class="mj_btn mj_greenbtn">#{oferta.jornada.nombre}</a>
-                                                </p:column>                                                
+                                                </h:column>                                                
 
-                                                <p:column >
+                                                <h:column >
                                                     <h:outputText value="#{oferta.costo}">
                                                         <f:convertNumber type="currency" currencySymbol="$" maxFractionDigits="0" />
                                                     </h:outputText>
-                                                </p:column>
+                                                </h:column>
 
-                                            </p:dataTable>
+                                            </h:dataTable>
                                         </h:form>
                                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 col-lg-offset-4 col-md-offset-4">
                                             <div class="mj_showmore">
@@ -639,28 +639,31 @@
                                 <div role="tabpanel" class="tab-pane" id="featuredjobs">
                                     <div class="mj_tabcontent mj_toppadder30">
                                         <h:form id="formMostrarOfertabyCalificcion" >
-                                            <p:dataTable emptyMessage="No se encontraron resultados" styleClass="table table-striped noHeader" var="oferta" value="#{ofertaBean.ofertasbyCalificcion}"
-                                                         selectionMode="single" selection="#{ofertaBean.ofertaSelected}" rowKey="#{oferta.idOferta}" >
-                                                <p:ajax event="rowSelect" listener="#{ofertaBean.onRowSelect}" />
+                                            <h:dataTable  styleClass="table table-striped noHeader" var="oferta" value="#{ofertaBean.ofertasbyCalificcion}" >
+                                                <h:column>
+                                                    <h:commandLink action="#{ofertaBean.gotoTrabajo(oferta)}"> 
+                                                        <p:graphicImage value="#{oferta.usuario.foto == null or oferta.usuario.foto.equals('') ? '/images/perfil-sinfoto.png':oferta.usuario.foto }"  styleClass="img-responsive" alt="" width="70" height="70" />
+                                                   </h:commandLink>
+                                                </h:column>
+                                                <h:column >
+                                                    <h:commandLink action="#{ofertaBean.gotoTrabajo(oferta)}">
+                                                        <h:outputText value="#{oferta.trabajo.titulo}" />
+                                                    </h:commandLink>
+                                                </h:column>
 
-
-                                                <p:column >
-                                                    <h:outputText value="#{oferta.trabajo.titulo}" />
-                                                </p:column>
-
-                                                <p:column >
+                                                <h:column >
                                                     <i class="fa fa-map-marker"></i>
                                                     <h:outputText value="#{oferta.usuario.ubicacion.barrio}" />
-                                                </p:column>
+                                                </h:column>
 
-                                                <p:column >
+                                                <h:column >
                                                     <a href="#" class="mj_btn mj_greenbtn">#{oferta.jornada.nombre}</a>
-                                                </p:column>                                                
+                                                </h:column>                                                
 
-                                                <p:column >
+                                                <h:column >
                                                     <h:outputText value="#{oferta.costo}" />
-                                                </p:column>
-                                            </p:dataTable>
+                                                </h:column>
+                                            </h:dataTable>
                                         </h:form>
                                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 col-lg-offset-4 col-md-offset-4">
                                             <div class="mj_showmore">
