--- a/web/Front/Cotizar.xhtml
+++ b/web/Front/Cotizar.xhtml
@@ -2,14 +2,13 @@
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./MainTemplete_Logeado.xhtml"
+                template="#{loginBean.isLogged()? './MainTemplete_Logeado.xhtml':'./MainTemplete.xhtml'}"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-  <f:event type="preRenderView" listener="#{loginBean.Autorizar()}"></f:event>
-
     <ui:define name="contenido">
+        <f:event type="preRenderView" listener="#{loginBean.Autorizar()}"></f:event>
         <div class="mj_lightgraytbg mj_resumepreview mj_toppadder80 mj_bottompadder80">
             <div class="container">
                 <div class="row">
