Envío de mails, actualización de ofertas.

--- a/web/Front/Como_Funciona.xhtml
+++ b/web/Front/Como_Funciona.xhtml
@@ -29,7 +29,7 @@
                                     <p class="mj_toppadder50">En metrópolis tienes la oportunidad de encontrar propuestas de trabajo posteadas por potenciales empleadores en busca de la persona indicada para llevar a cabo esa tarea específica. </p>
                             </div>
                             <div class="mj_workit_innerfooter">
-                                <a href="#">leer mas...</a>
+                                <a href="./Como_Contratar.xhtml">leer mas...</a>
                             </div>
                         </div>
                     </div>
