--- a/web/Front/index.xhtml
+++ b/web/Front/index.xhtml
@@ -606,7 +606,7 @@
                                                 </h:column>
 
                                                 <h:column>
-                                                    <h:commandLink action="#{ofertaBean.gotoTrabajo(oferta)}">
+                                                    <h:commandLink action="#{ofertaBean.toCotizar(oferta)}">
                                                         <h:outputText value="#{oferta.trabajo.titulo}" />
                                                     </h:commandLink>
                                                 </h:column>
@@ -646,7 +646,7 @@
                                                    </h:commandLink>
                                                 </h:column>
                                                 <h:column >
-                                                    <h:commandLink action="#{ofertaBean.gotoTrabajo(oferta)}">
+                                                    <h:commandLink action="#{ofertaBean.toCotizar(oferta)}">
                                                         <h:outputText value="#{oferta.trabajo.titulo}" />
                                                     </h:commandLink>
                                                 </h:column>
